# introspection

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  analysis.qmd  dashboard.html  pyproject.toml
data/: steer_results.jsonl
data/qwen_14b/: all_concepts.json  steering_vectors.pt  sweep.json  sweep_early.json
data/qwen_235a22b/: all_concepts.json  all_concepts_early.json  more_trials.json  steering_vector.pt  sweep.json  sweep_early.json  sweep_legacy.jsonl
data/qwen_32b/: all_concepts.json  steering_vectors.pt  sweep.json  sweep_early.json  sweep_legacy.jsonl
data/qwen_8b/: all_concepts.json  steering_vectors.pt  sweep.jsonl  sweep_early.json
logs/: 2025-11-25T14-54-04-08-00_grade-responses_JGeDTCB8c8jzjz9bBucMEu.eval  2025-11-30T17-59-30-08-00_grade-responses_TxWUTLPbQCEDWujGPAfM2s.eval  2025-12-05T22-57-07-08-00_grade-responses_Hv2wZJcEACSYcXLwEPfYcV.eval  2025-12-06T14-11-03-08-00_grade-responses_73cmDP8ZChhAbtWrohauUy.eval  2025-12-13T18-20-42+05-30_grade-responses_BjhYncuRhPSneiF83b7afE.eval
logs/qwen_14b/: 2025-12-04T23-38-01-08-00_grade-responses_CtHkq8LuCNcbfYAxM8DoH7.eval
logs/qwen_235b/: 2025-12-04T23-39-08-08-00_grade-responses_6nCDuhrdrXfLVa5WDsAi2T.eval
logs/qwen_32b/: qwen_32b.eval
logs/qwen_8b/: 2025-12-04T23-37-16-08-00_grade-responses_nBJhzyWtiik9obZebAva8p.eval
scripts/: migrate_sweep.py
src/introspection/: _registry.py  analysis.py  constants.py  generate_steering_vectors.py  grader.py  grader_prompts.py  hooks.py  migrate_data.py  steer.py  types.py  utils.py  visualize.py
tests/: test_steering_hook.py
