[project]
name = "introspection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "anthropic>=0.75.0",
    "huggingface-hub>=0.36.0",
    "inspect-ai>=0.3.149",
    "inspect-viz>=0.3.4",
    "matplotlib>=3.10.7",
    "openai>=2.8.1",
    "plotly>=6.5.0",
    "quarto-cli>=1.8.26",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]


[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "pandas-stubs>=2.3.2.250926",
    "pdbpp>=0.11.7",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[tool.basedpyright]
ignore = ["**/*.ipynb"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingImports = "error"
reportAny = false # any is worth the convenience sometimes
reportExplicitAny = false
reportPrivateUsage = false # worth it for testing private functions
allowedUntypedLibraries = ["datasets", "plotly", "tqdm", "statsmodels", "timeout_decorator", "transformers"]

executionEnvironments = [
  { root = "tests", reportPrivateUsage = false, reportMissingTypeStubs = false },
]

[project.entry-points.inspect_ai]
introspection = "introspection._registry"

[tool.ruff]
exclude = ["**/*.ipynb"]
lint.ignore = [
]

[tool.uv.build-backend]
module-root = "src"
